--- a/scss/portfolio-sections/_buttons-list.scss
+++ b/scss/portfolio-sections/_buttons-list.scss
@@ -3,4 +3,19 @@
     justify-content: center;
     gap: 8px;
     margin-bottom: 50px;
+
+    @media screen and (max-width: 480px) {
+        margin-bottom: 40px;
+        display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+    }
+
+    @media screen and (max-width: 768px) {
+        margin-bottom: 30px;
+    }
+
+    @media screen and (max-width: 1200px){
+       
+    }
 }
