--- a/scss/portfolio-sections/_services-caption.scss
+++ b/scss/portfolio-sections/_services-caption.scss
@@ -4,4 +4,16 @@
     font-weight: 700;
     line-height: 2; /* 200% */
     letter-spacing: 1.08px;
+
+    @media screen and (max-width: 480px) {
+
+            }
+        
+            @media screen and (max-width: 768px) {
+                
+            }
+        
+            @media screen and (max-width: 1200px){
+               
+            }
 }
