--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -66,8 +66,18 @@
             color: $gr;
             font-size: 14px;
             font-weight: 400;
-            line-height: 1.71; /* 171.429% */
+            line-height: 24px; /* 171.429% */
             letter-spacing: 0.42px;
+
+            @media screen and (max-width: 480px) {
+            }
+
+            @media screen and (max-width: 768px) {
+            }
+
+            @media screen and (max-width: 1200px){
+                line-height: 1.71;
+            }
             }
         }
     
@@ -75,10 +85,26 @@
     color: $white;
     font-size: 14px;
     font-weight: 400;
-    line-height: 1.71; /* 171.429% */
+    line-height: 24px; /* 171.429% */
     letter-spacing: 0.42px;
     margin-bottom: 9px;
     margin-top: 20px;
+
+    @media screen and (max-width: 480px) {
+        width: 232px;
+        height: 21px;
+        flex-shrink: 0;
+    }
+
+    @media screen and (max-width: 768px) {
+        width: 232px;
+        height: 21px;
+        flex-shrink: 0;
+    }
+
+    @media screen and (max-width: 1200px){
+        line-height: 1.71; 
+    }
     }
     
 
