--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -18,6 +18,11 @@
       padding-bottom: 25px;
     }
 
+    & > .container {
+        display: flex;
+        align-items: center;
+      }
+
 &__,.container{
         display: flex;
     }
