--- a/scss/sections/_features.scss
+++ b/scss/sections/_features.scss
@@ -27,7 +27,7 @@
         content: "";
         border-radius: 4px;
         background: $team;
-        width: 450px;
+        width: 100%;
         height: 120px;
         display: block;
         background-image: url(../img/antenna.jpg);
@@ -35,14 +35,19 @@
         background-position: center;
         margin-bottom: 30px;
 
+        @media screen and (min-width: 480px) {
+
+          width: 450px;
+          
+        }
+        
+
         @media screen and (min-width: 768px) {
             width: 354px;
-            height: 120px;
           }
       
           @media screen and (min-width: 1200px) {
             width: 270px;
-            height: 120px;
           }
     }
     
