--- a/scss/portfolio-sections/_portfolio-list.scss
+++ b/scss/portfolio-sections/_portfolio-list.scss
@@ -5,16 +5,16 @@
     margin: 0 auto; */
     gap: 30px;
 
-    @media screen and (max-width: 480px) {
-display: block;
-    }
+//     @media screen and (max-width: 480px) {
+// display: block;
+//     }
 
-    @media screen and (max-width: 768px) {
-        display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-align-content: center;
-    }
+//     @media screen and (max-width: 768px) {
+//         display: flex;
+//   flex-wrap: wrap;
+//   flex-direction: column;
+// align-content: center;
+//     }
 
     @media screen and (max-width: 1200px){
        
