--- a/scss/portfolio-sections/_services-item.scss
+++ b/scss/portfolio-sections/_services-item.scss
@@ -2,10 +2,19 @@
     /* width: 370px;
 height: 404px;
 flex-shrink: 0; */
-flex-basis: calc((100% - 60px) / 3);
+// flex-basis: calc((100% - 60px) / 3);
 border: 1px solid $nwhite;
 background: $white;
 position: relative;
+
+flex-basis: calc((100% - 0px) / 1);
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - 30px) / 2);
+    }
+
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - 60px) / 3);
+    }
 }
 
 .services-item:hover {
