--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -103,13 +103,13 @@ margin-bottom: 60px;
             line-height: 24px; /* 171.429% */
             letter-spacing: 0.42px;
 
-            @media screen and (max-width: 480px) {
+            @media screen and (min-width: 480px) {
             }
 
-            @media screen and (max-width: 768px) {
+            @media screen and (min-width: 768px) {
             }
 
-            @media screen and (max-width: 1200px){
+            @media screen and (min-width: 1200px){
                 line-height: 1.71;
             }
             }
@@ -124,19 +124,19 @@ margin-bottom: 60px;
     margin-bottom: 9px;
     margin-top: 20px;
 
-    @media screen and (max-width: 480px) {
+    @media screen and (min-width: 480px) {
         width: 232px;
         height: 21px;
         flex-shrink: 0;
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (min-width: 768px) {
         width: 232px;
         height: 21px;
         flex-shrink: 0;
     }
 
-    @media screen and (max-width: 1200px){
+    @media screen and (min-width: 1200px){
         line-height: 1.71; 
     }
     }
@@ -157,10 +157,6 @@ margin-bottom: 60px;
         display: flex;
   justify-content: center;
   gap: 10px;
-    }
-
-    &__item {
-        
     }
 
     .social {
