--- a/style/main.css
+++ b/style/main.css
@@ -776,7 +776,7 @@ img {
   line-height: 24px; /* 171.429% */
   letter-spacing: 0.42px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .footer .addres__link {
     line-height: 1.71;
   }
@@ -790,21 +790,21 @@ img {
   margin-bottom: 9px;
   margin-top: 20px;
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .footer__addres {
     width: 232px;
     height: 21px;
     flex-shrink: 0;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer__addres {
     width: 232px;
     height: 21px;
     flex-shrink: 0;
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .footer__addres {
     line-height: 1.71;
   }
@@ -1193,21 +1193,23 @@ height: 4px;
 
 .buttons__list {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   gap: 8px;
   margin-bottom: 50px;
+  width: 100%;
+  flex-wrap: wrap;
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .buttons__list {
     margin-bottom: 40px;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
+    width: 360px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .buttons__list {
     margin-bottom: 30px;
+    width: 100%;
+    justify-content: center;
   }
 }
 .services__im {
@@ -1231,27 +1233,24 @@ height: 4px;
   margin: 0 auto; */
   gap: 30px;
 }
-@media screen and (max-width: 480px) {
-  .portfolio__list {
-    display: block;
-  }
-}
-@media screen and (max-width: 768px) {
-  .portfolio__list {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-content: center;
-  }
-}
 .services__item {
   /* width: 370px;
   height: 404px;
   flex-shrink: 0; */
-  flex-basis: calc((100% - 60px) / 3);
   border: 1px solid #EEE;
   background: #FFFFFF;
   position: relative;
+  flex-basis: calc((100% - 0px) / 1);
+}
+@media screen and (min-width: 768px) {
+  .services__item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .services__item {
+    flex-basis: calc((100% - 60px) / 3);
+  }
 }
 
 .services-item:hover {
@@ -1283,10 +1282,7 @@ height: 4px;
   font-weight: 400;
   line-height: 28px; /* 155.556% */
   letter-spacing: 0.54px;
-  padding-top: 63px;
-  padding-bottom: 63px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding: 77px 24px;
   position: absolute;
   top: 0;
   left: 0;
@@ -1298,18 +1294,20 @@ height: 4px;
   transition-delay: 0;
   transform: translatey(370px);
   overflow: hidden;
-  height: 294px;
+  height: 100%;
+  width: 100%;
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 768px) {
   .services__paragraph {
-    width: 450px;
+    padding: 57px 24px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 1200px) {
   .services__paragraph {
-    width: 354px;
+    padding: 63px 24px;
   }
 }
+
 .services__box {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -1325,8 +1323,8 @@ height: 4px;
   letter-spacing: 1.08px;
 }
 .services__img {
-  display: block;
   width: 100%;
+  height: 294px;
 }
 
 .services__text {
