--- a/style/main.css
+++ b/style/main.css
@@ -286,12 +286,6 @@ img {
   padding-left: 40px;
   z-index: 3;
 }
-
-.is-hidden {
-  pointer-events: none;
-  opacity: 0;
-}
-
 .menu__btn {
   border: none;
   background: transparent;
@@ -299,22 +293,18 @@ img {
   top: 10px;
   right: 15px;
 }
-
 .menu__close {
   width: 40px;
   height: 40px;
 }
-
 .menu__close:hover {
   fill: #2196F3;
 }
-
 .menu__list {
   display: flex;
   flex-direction: column;
   gap: 35px;
 }
-
 .menu__link {
   color: #212121;
   font-size: 40px;
@@ -322,7 +312,9 @@ img {
   line-height: normal;
   letter-spacing: 0.8px;
 }
-
+.menu__link:hover {
+  color: #2196F3;
+}
 .menu__list-contact {
   display: flex;
   flex-direction: column;
@@ -330,15 +322,13 @@ img {
   margin-bottom: 64px;
   margin-top: 188px;
 }
-
-.menu__item-contact:first-child .menu__link-contact {
+.menu .menu__item-contact:first-child .menu__link-contact {
   color: #2196F3;
   font-size: 34px;
   font-weight: 500;
   line-height: 1.17;
   letter-spacing: 0.68px;
 }
-
 .menu__link-contact {
   color: #757575;
   font-size: 24px;
@@ -346,11 +336,9 @@ img {
   line-height: 1.16;
   letter-spacing: 0.48px;
 }
-
 .menu__list-socials {
   display: flex;
 }
-
 .menu__item-social:not(:last-child) {
   margin-right: 10px;
   display: flex;
@@ -363,7 +351,6 @@ img {
   display: block;
   margin-left: 10px;
 }
-
 .menu__link-social {
   color: #2196F3;
   font-size: 18px;
@@ -372,6 +359,11 @@ img {
   line-height: 22px;
   /* 122.222% */
   letter-spacing: 0.36px;
+}
+
+.is-hidden {
+  pointer-events: none;
+  opacity: 0;
 }
 
 .hero {
