--- a/style/main.css
+++ b/style/main.css
@@ -77,12 +77,11 @@ img {
     padding-bottom: 25px;
   }
 }
-.header > .container {
-  display: flex;
-  align-items: center;
-}
-.header__, .header .container {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .header > .container {
+    display: flex;
+    align-items: center;
+  }
 }
 .header__nav {
   display: flex;
