--- a/scss/sections/_modal.scss
+++ b/scss/sections/_modal.scss
@@ -25,11 +25,11 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 border-radius: 4px;
-width: 450px;
+width: 90%;
 height: 609px;
 
 @media screen and (min-width: 480px) {
-
+width: 450px;
 }
 
 @media screen and (min-width: 768px) {
@@ -37,8 +37,8 @@ height: 609px;
 }
 
 @media screen and (min-width: 1200px) {
-  width: auto;
-  height: auto;
+  width: 528px;
+height: 581px;
 }
 
 .model__btn {
@@ -95,10 +95,10 @@ letter-spacing: 0.6px;
 text-align: center;
 margin-bottom: 12px;
 line-height: 30px;
-width: 370px;
+width: 100%;
 
 @media screen and (min-width: 480px) {
-
+width: 370px;
 }
 
 @media screen and (min-width: 768px) {
@@ -140,7 +140,7 @@ padding: 12px 12px 12px 42px;
 margin-bottom: 10px;
 margin-top: 4px;
 outline: none;
-width: 370px;
+width: 100%;
   height: 40px;
 
 @media screen and (min-width: 480px) {
@@ -171,7 +171,7 @@ margin-bottom: 25px;
 resize: none;
 margin-top: 4px;
 outline: none;
-width: 370px;
+width: 100%;
 height: 120px;
 
 @media screen and (min-width: 480px) {
@@ -279,11 +279,11 @@ position: relative;
   font-weight: 400;
   line-height: 1.7;
   letter-spacing: 0.42px;
-  width: 346px;
+  width: 100%;
 height: 14px;
   font-size: 12px;
   @media screen and (min-width: 480px) {
-
+    width: 346px;
   }
   
   @media screen and (min-width: 768px) {
