--- a/style/main.css
+++ b/style/main.css
@@ -369,17 +369,38 @@ img {
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/hero.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../img/mobile/heromobile@1x.webp);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
   overflow: hidden;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../img/mobile/heromobile@2x.webp);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../img/tablet/herotablet@1x.webp);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../img/tablet/hero@2x.webp);
+  }
+}
 @media screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../img/deskstop/hero@1x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../img/deskstop/hero@2x.jpg);
   }
 }
 .hero__title {
@@ -1088,13 +1109,18 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 4px;
-  width: 450px;
+  width: 90%;
   height: 609px;
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
-    width: auto;
-    height: auto;
+    width: 528px;
+    height: 581px;
   }
 }
 .modal .model__btn {
@@ -1133,7 +1159,12 @@ img {
   text-align: center;
   margin-bottom: 12px;
   line-height: 30px;
-  width: 370px;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .modal__title {
+    width: 370px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal__title {
@@ -1157,7 +1188,7 @@ img {
   margin-bottom: 10px;
   margin-top: 4px;
   outline: none;
-  width: 370px;
+  width: 100%;
   height: 40px;
 }
 @media screen and (min-width: 1200px) {
@@ -1178,7 +1209,7 @@ img {
   resize: none;
   margin-top: 4px;
   outline: none;
-  width: 370px;
+  width: 100%;
   height: 120px;
 }
 @media screen and (min-width: 1200px) {
@@ -1240,9 +1271,14 @@ img {
   font-weight: 400;
   line-height: 1.7;
   letter-spacing: 0.42px;
-  width: 346px;
+  width: 100%;
   height: 14px;
   font-size: 12px;
+}
+@media screen and (min-width: 480px) {
+  .modal .check__text {
+    width: 346px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal .check__text {
