--- a/scss/sections/_modal.scss
+++ b/scss/sections/_modal.scss
@@ -97,6 +97,10 @@ margin-bottom: 12px;
 line-height: 30px;
 width: 100%;
 
+@media screen and (max-width: 333px) {
+  line-height: 20px;
+  }
+
 @media screen and (min-width: 480px) {
 width: 370px;
 }
@@ -277,7 +281,6 @@ position: relative;
   &__text {
     color: $contacts-list-link;
   font-weight: 400;
-  line-height: 1.7;
   letter-spacing: 0.42px;
   width: 100%;
 height: 14px;
@@ -293,6 +296,7 @@ height: 14px;
   @media screen and (min-width: 1200px) {
     width: 400px;
     font-size: 14px;
+    line-height: 1.7;
   }
   }
   
@@ -332,7 +336,7 @@ height: 14px;
   outline: none;
 
   @media screen and (min-width: 480px) {
-
+width: 100%;
   }
   
   @media screen and (min-width: 768px) {
