--- a/style/main.css
+++ b/style/main.css
@@ -1161,6 +1161,11 @@ img {
   line-height: 30px;
   width: 100%;
 }
+@media screen and (max-width: 333px) {
+  .modal__title {
+    line-height: 20px;
+  }
+}
 @media screen and (min-width: 480px) {
   .modal__title {
     width: 370px;
@@ -1269,7 +1274,6 @@ img {
 .modal .check__text {
   color: #757575;
   font-weight: 400;
-  line-height: 1.7;
   letter-spacing: 0.42px;
   width: 100%;
   height: 14px;
@@ -1284,6 +1288,7 @@ img {
   .modal .check__text {
     width: 400px;
     font-size: 14px;
+    line-height: 1.7;
   }
 }
 .modal .check__link {
@@ -1313,6 +1318,11 @@ img {
   border: none;
   cursor: pointer;
   outline: none;
+}
+@media screen and (min-width: 480px) {
+  .modal .check__btn {
+    width: 100%;
+  }
 }
 .modal__btn {
   text-align: center;
