--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -24,11 +24,11 @@
     @media screen and (min-width: 1200px) {
         padding-top: 200px;
         padding-bottom: 200px;
-        background-image: linear-gradient($gradient, $gradient), url(../../img/deskstop/hero@1x.jpg);
+        background-image: linear-gradient($gradient, $gradient), url(../../img/deskstop/hero@1x.webp);
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-        background-image: linear-gradient($gradient, $gradient), url(../../img/deskstop/hero@2x.jpg);
+        background-image: linear-gradient($gradient, $gradient), url(../../img/deskstop/hero@2x.webp);
         }
       }
 
